<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.tms.HomeFragment"
        android:label="@string/home_text"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.tms.AboutFragment"
        android:label="@string/about_text"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_contact_us"
        android:name="com.example.tms.ContactUsFragment"
        android:label="@string/contact_us_text"
        tools:layout="@layout/fragment_contact_us" />
</navigation>